--- a/examples/GoogleNow/index.html
+++ b/examples/GoogleNow/index.html
@@ -8,16 +8,16 @@
       ::selection {background: transparent;}
     </style>
 
-    <link rel="stylesheet" type="text/css" href="../../lib_ext/css/vs_ui.css">
-    <link rel="stylesheet" type="text/css" href="../../lib_ext/css/vs_ui_pure.css">
+    <link rel="stylesheet" type="text/css" href="../../ext/VSToolkit/lib_debug/css/vs_ui.css">
+    <link rel="stylesheet" type="text/css" href="../../ext/VSToolkit/lib_debug/css/vs_ui_pure.css">
     <link rel="stylesheet" type="text/css" href="GoogleNow.css">
 
-    <script type="text/javascript" src="../../lib_ext/js/vs_util.js"></script>
-    <script type="text/javascript" src="../../lib_ext/js/vs_core.js"></script>
-    <script type="text/javascript" src="../../lib_ext/js/vs_data.js"></script>
-    <script type="text/javascript" src="../../lib_ext/js/vs_ui.js"></script>
-    <script type="text/javascript" src="../../lib_ext/js/vs_fx.js"></script>
-    <script type="text/javascript" src="../../lib_ext/animatedtransition.js"></script>
+    <script type="text/javascript" src="../../ext/VSToolkit/lib_debug/js/vs_util.js"></script>
+    <script type="text/javascript" src="../../ext/VSToolkit/lib_debug/js/vs_core.js"></script>
+    <script type="text/javascript" src="../../ext/VSToolkit/lib_debug/js/vs_data.js"></script>
+    <script type="text/javascript" src="../../ext/VSToolkit/lib_debug/js/vs_ui.js"></script>
+    <script type="text/javascript" src="../../ext/VSToolkit/lib_debug/js/vs_fx.js"></script>
+    <script type="text/javascript" src="../../ext/AnimatedTransition/lib/animatedtransition.js"></script>
 
     <script type="text/javascript" src="../../lib/dataflow.js"></script>
 
