--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ visually.
         </p>
         <a href="https://github.com/dthevenin/DataflowAPI/blob/master/dataflow.asc">API and documentation</a>
         <br />
-        <h3>Authors</h3><p>David Thevenin</p>
+        <h3>Authors</h3><p>David Thevenin</p><p>Eric Bréchemier</p>
         <br />
         <h3>Download</h3>
 
